cambio de prueba de csv a api

--- a/prueba.Rmd
+++ b/prueba.Rmd
@@ -17,21 +17,19 @@ Por medio de las herramientas de R, R Studio, R Markdow y R Shiny junto con las 
 library(jsonlite)
 library(curl)
 library(tidyverse)
-q <- curl_escape("true")
-uri_paradas_metro <- paste("https://covid19.secuoyas.io/api/v1/es/ccaa?ultimodia=",q, sep="")
-paradas_metro <- fromJSON(uri_paradas_metro)
-paradas_metro <- paradas_metro[["timeline"]][["regiones"]]
-otra <-paradas_metro[[1]][["data"]]
+api <- curl_escape("true")
+uri_recuperados <- paste("https://covid19.secuoyas.io/api/v1/es/ccaa?ultimodia=",api, sep="")
+recuperados <- fromJSON(uri_recuperados)
+recuperados <- recuperados[["timeline"]][["regiones"]]
+tabla <-recuperados[[1]][["data"]]
 
-otra2 <-read.csv("PorcentajeDeMujeresSinIngresos.csv")
+pruebacsv <-read.csv("PorcentajeDeMujeresSinIngresos.csv")
 
 inputPanel(
   selectInput("Casos:", label = "Recuperados:",
               choices = c("125","163","1063","1533","1537","2180","2287","2652","3107","3772","3905","6392","8716","9204","9970","10671","16160","26203","40736"), selected = "125")
 )
 
-renderTable({otra2%>%filter(Estado==input$Casos)})
-
-otra2 <-read.csv("PorcentajeDeMujeresSinIngresos.csv")
+renderTable({tabla%>%filter(casosRecuperados==input$Casos)})
 
 ```
